# fury-renegade-rgb

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: release.yml
src/: error.rs  fury_commands.rs  headbang.rs  main.rs  types.rs
