[package]
name = "fury-renegade-rgb"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ARitz-Cracker/fury-renegade-rgb"
authors = ["Aritz Beobide-Cardinal <aritz@aritzcracker.ca>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i2cdev = "0.5.1"
thiserror = "1.0"
color-eyre = "0.5"
bpaf = { version = "0.7", features = ["derive"] }
