[package]
name = "fury-renegade-rgb"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/ARitz-Cracker/fury-renegade-rgb"
authors = ["Aritz Beobide-Cardinal <aritz@aritzcracker.ca>"]
description = "A small CLI app that allows you to control the RGB lights on Kingston Fury Renegade RAM"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i2cdev = "0.6.2"
thiserror = "2.0"
color-eyre = "0.6"
bpaf = { version = "0.9", features = ["derive"] }
